navbarin overlap fixi.

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ main {
 }
 
 section {
-    max-width: 900px;
+    padding-left: 250px;
+    max-width: 1200px;
     width: 80%;
     margin: 20px auto;
 }
@@ -35,10 +36,9 @@ section {
 nav {
     display: block;
     overflow: hidden;
-    position: absolute;
+    position: fixed;
     width: 250px;
     left: 20;
-    margin-right: 10px;
     margin-left: 20px;
 }
 
